# automatetest

./: .gitignore  CMakeLists.txt  dev.env  environment.yml  minimal_env.yml  setup.py  train.py
automate/: __init__.py  assembly_conv.py  assembly_net.py  brep.py  cached_dataset.py  geometric_baselines.py  grid_nn.py  implicit.py  mate_predictor.py  mate_predictor_base.py  pointnet_encoder.py  sbgcn.py  transforms.py  util.py  uvgrid.py  uvnet_encoders.py
cpp/: automate.cpp
pspy/: CMakeLists.txt  __init__.py  body.cpp  body.h  brick.step  cone.x_t  disjointset.cpp  disjointset.h  eclass.cpp  eclass.h  edge.cpp  edge.h  face.cpp  face.h  implicit_part.cpp  implicit_part.h  loop.cpp  loop.h  lsh.cpp  lsh.h  main.cpp  occtbody.cpp  occtedge.cpp  occtface.cpp  occtloop.cpp  occtvertex.cpp  part.cpp  part.h  psbody.cpp  psedge.cpp  psface.cpp  psloop.cpp  pspy.cpp  psvertex.cpp  readme.md  setup.py  topology.h  trunc_cone.x_t  types.h  vertex.cpp  (+1 more)
pspy/ci/conda/: meta.yaml
pspy/parasolid/: readme.md
pspy/pspy/: __init__.py
transfer_learning/: .gitignore  autoencoder_state_dict.pt  datasets.py  df_face_acc.parquet  f360_render_test_face_losses.pt  f360_render_test_losses.pt  figs.ipynb  figures.ipynb  gen_tables.py  generate_codes.py  gradient_cube.ipynb  mfcad-figs.ipynb  plotting.py  precoded_training.py  preprocess_dataset.py  preprocess_simple_implicits.py  readme.md  render_shape.py  rendering.py  sbgcn_baseline.py  scratch.ipynb  time_figures.ipynb  train_latent_space.py  train_task_from_codes.py  util.py
